done with issue

--- a/#src/sass/_header.sass
+++ b/#src/sass/_header.sass
@@ -1,5 +1,13 @@
 .header
-  background: red
-
-  &.title
-    color: yellow-green
+  background: $box-bg
+  padding: 20px 
+  text-align: center
+  box-shadow: $box-shadow
+  margin-bottom: 8em
+  .title
+    background: $gradient
+    font-size: 40px
+  .text-gradient
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+    
