--- a/#src/sass/_variables.sass
+++ b/#src/sass/_variables.sass
@@ -1,2 +1,8 @@
-$main-bg: black 
-$header-bg
+$main-bg: linear-gradient(to left,#212227 1.47%,#0f1016 100%),#c4c4c4 
+$box-bg: linear-gradient(90.89deg,#25262b -1.84%,#1a1b20 99.7%)
+$box-bg-hover: rgba(0,0,0,.3)
+$gradient: linear-gradient(90deg,#fb8a00 0,#f11370 35%,#1da8eb 65%,#89ca70 100%)
+$box-shadow: 0 1em 2.75em rgb(0 0 0 / 50%)
+$text-color: rgba(255,255,255,.8)
+$scroll_bg: rgba(143, 127, 255, .25)
+$active_color: #8F7FFF
